<resources>
    <string name="app_name">Firebase Chat Demo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="attachment">Attachment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="price">Price</string>
    <string name="is_negotiable">Is Negotiable</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="er_fname">Please Enter First Name</string>
    <string name="er_lname">Please Enter Last Name</string>
    <string name="er_phonenull">Please Enter Phone Number</string>
    <string name="er_phonelength">Phone Number should be of 10 digits</string>
    <string name="et_email">Please Enter Email Address</string>
    <string name="er_gender">Please Select your Gender</string>
    <string name="allow_permission">"Allow permissions to continue from app settings."</string>
    <string name="txt_capture_image">Capture Image</string>
    <string name="txt_open_gallery">Open Gallery</string>
    <string name="txt_select_mode">Select Mode of Action</string>
    <string name="txt_image_file_size_error">Cannot attach images of size greater than 10MB</string>
    <string name="txt_video_file_size_error">Cannot attach videos of size greater than 20MB</string>
    <string name="txt_cannot_add_more_than_5_media_files">You cannot add more than 5 media files</string>
    <string name="property">Property</string>
    <string name="add_type">Add Type</string>
    <string name="fname">fname</string>
    <string name="er_title">Please Enter Title</string>
    <string name="er_desc">Please Enter Some Description</string>
    <string name="er_add">Please Enter Address of the asset</string>
    <string name="er_price">Please Enter approximate Price</string>
    <string name="er_type">Please Select Property Type</string>
    <string name="loading">Loading</string>
    <string name="er_image">Please select at least one Image</string>
    <string name="no_data_found">No Data Found</string>
    <string name="check_internet_connection">Please check your Internet Connection</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>

</resources>
